--- a/app/views/example/form.html.erb
+++ b/app/views/example/form.html.erb
@@ -1,1 +1,56 @@
-example@form page
+<br> <br>
+<br>
+<hr>
+<%= form_tag job_applications_path  do %>
+<%= label_tag :full_name %>
+<%= text_field_tag :full_name %><br>
+
+<%= label_tag :phone %>
+<%= text_field_tag :phone %><br>
+
+<%= label_tag :hobby %>
+<%= text_field_tag :hobby %><br>
+
+<%= label_tag :years_experience %>
+<%= number_field_tag :years_experience %><br>
+
+<%= label_tag :available_date %>
+<%= text_field_tag :available_date %><br>
+
+<%= submit_tag %>
+<% end %>
+
+
+
+
+
+<!-- <form class="new_job_application" id="new_job_application" action="/job_applications" accept-charset="UTF-8" method="post">
+  <!-- <p>
+    <label for="job_application_full_name">Full name</label>
+    <input type="text" name="job_application[full_name]" id="job_application_full_name" />
+  </p> -->
+
+  <!-- <p>
+    <label for="job_application_phone">Phone</label>
+    <input type="tel" name="job_application[phone]" id="job_application_phone" />
+  </p>
+
+  <p>
+    <label for="job_application_hobby">Hobby</label>
+    <input type="text" name="job_application[hobby]" id="job_application_hobby" />
+  </p> -->
+
+  <!-- <p>
+    <label for="job_application_years_experience">Years experience</label>
+    <input type="number" name="job_application[years_experience]" id="job_application_years_experience" />
+  </p> -->
+
+  <!-- <p>
+    <label for="job_application_available_date">Available date</label>
+    <input type="date" name="job_application[available_date]" id="job_application_available_date" />
+  </p>
+
+  <p>
+    <input type="submit" name="commit" value="Create Job application" />
+  </p>
+</form> -->
